
[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_crypto_bot"
version = "0.1.0"
description = "Adaptive multi‑agent crypto trading bot"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core", "agents"]
